--- a/customer/templates/customer/vendor-details.htm
+++ b/customer/templates/customer/vendor-details.htm
@@ -13,7 +13,6 @@
             <div class="col-xs-12 col-md-4 text-center noBig">
                 <img class="img-responsive mt-20" src="/media/{{vendor_img.image}}" alt="{{vendor_img.description}}">
                     <!-- prescription Doctor -->   
-                    <span class="li noBig" ><a href="#!" class="btn btn-main btn-small btn-round-full mt-40" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></button>                 
             </div>
                 <div class="media-body noBig">
                     <h3 class="font-weight-bold text-uppercase">{{vendor.shop_name}}</h3>
@@ -62,7 +61,7 @@
 
                 </div>
             </div>
-        </div><!--end of product-->>
+        </div><!--end of product-->
 
     </div>
 </section>
