--- a/doctor/templates/doctor/updatedoctor.htm
+++ b/doctor/templates/doctor/updatedoctor.htm
@@ -76,11 +76,11 @@
                   <p class="help">{{ form.charge.errors }}</p>
                 </div>
               </div>
-              <div class="form-group clear-both">
+              <!-- <div class="form-group clear-both">
                 <label for="imageUploadField">Upload a profile picture</label>
                 {{ img_form.image }}
                 <p class="help">{{ img_form.image.errors }}</p>
-              </div>
+              </div> -->
               <hr>
               <div class="text-center">
                 <button type="submit" class="btn btn-main text-center">Update</button>
