--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -52,7 +52,9 @@
                     <li class="dropdown noBig">
                         <a href="/customer/dashboard">Dashboard</a>
                     </li>
-                    <!-- Home -->
+                    <li class="dropdown noBig">
+                        <a href="/customer/doctor/">Doctor Consultation</a>
+                    </li>
                     <li class="dropdown noBig">
                         <a href="/product/shop/" aria-label="shop product">Shop</a>
                     </li><!-- / Home -->
