--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -104,29 +104,6 @@
                         <a href="/">Home</a>
                     </li><!-- / Home -->
 
-                    <!-- Elements -->
-                    <li class="dropdown dropdown-slide noBig">
-                        <a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="350"
-                            role="button" aria-haspopup="true" aria-expanded="false">Shop <span
-                                class="tf-ion-ios-arrow-down noBig"></span></a>
-                        <div class="dropdown-menu noBig">
-                            <div class="row noBig">
-
-                                <!-- Basic -->
-                                <div class="col-lg-12 col-md-6 mb-sm-3 noBig">
-                                    <ul class="noBig">
-                                        <li class="dropdown-header">Pages</li>
-                                        <li role="separator" class="divider"></li>
-                                        <li class="noBig"><a href="/shop.htm">Medicine</a></li>
-                                        <li class="noBig"><a href="checkout.htm">Device</a></li>
-                                        <li class="noBig"><a href="hygenic.htm">Hygenic</a></li>
-                                    </ul>
-                                </div>
-                            </div><!-- / .row -->
-                        </div><!-- / .dropdown-menu -->
-                    </li><!-- / Elements -->
-
-
                     <!-- Pages -->
                     <li class="dropdown full-width dropdown-slide noBig">
                         <a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="350"
@@ -161,7 +138,7 @@
                                         <li role="separator" class="divider"></li>
                                         <li class="noBig"><a href="/doctor/login">Doctor Account</a></li>
                                         <li class="noBig"><a href="/vendor/login">Vender Account</a></li>
-                                        <li class="noBig"><a href="#">Lab Account</a></li>
+                                        <li class="noBig"><a href="/lab/login">Lab Account</a></li>
                                     </ul>
                                 </div>
 
