--- a/templates/snippets/product-model.htm
+++ b/templates/snippets/product-model.htm
@@ -22,7 +22,7 @@
                                 {{image.product.description}}
                             </p>
                             <a href="/cart/add/{{image.product.id}}" class="btn btn-main">Add To Cart</a>
-                            <a href="/product/shop/detail/{{image.product.id}}" class="btn btn-transparent">View Product Details</a>
+                            <a href="/product/shop/detail/{{image.product.id}}/" class="btn btn-transparent">View Product Details</a>
                         </div>
                     </div>
                 </div>
